# esp-BoschLDI

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  deploy.ps1  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3
main/: CMakeLists.txt  accessory_config.c  accessory_config.h  app_main.c  automation.c  automation.h  bike_history.c  bike_history.h  ble_gap.c  ble_gap.h  bosch_ldi.h  gatt_client.c  gatt_client.h  home_assistant.c  home_assistant.h  hue_integration.c  hue_integration.h  idf_component.yml  live_data_decode.c  live_data_decode.h  log_store.c  log_store.h  persistent_log.c  persistent_log.h  status_led.c  status_led.h  telemetry_export.c  telemetry_export.h  wifi_admin.c  wifi_admin.h
tools/: esp-run-app.ps1  pio-build.ps1  pio-upload.ps1
